tests/sksl/errors/golden/UseWithoutInitializeReturnValue.glsl
### Compilation failed:

Updated & out!
CFG scan!
error: 1: 'r' has not been assigned
1 error
